Fix alignments

--- a/css/main.css
+++ b/css/main.css
@@ -641,7 +641,6 @@ a:after {
 .wrapper { min-height:100%; position: relative; display:block;}
 .customDiv { width: 100%; text-align:center; font-size:33px;}
 #about {margin-bottom:55px;}
-.lefty-menu {float: left;}
 .lefty { float: left; }
-
+.fix-alignment { margin-left:15px; }
 
